--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<div th:replace="/layout/fragments/nav.html :: nav"></div>
+<div th:replace="layout/fragments/nav.html :: nav"></div>
 
 <div class="container" style="width: 70%; margin-bottom: 6rem">
     <div class="py-5 text-center">
@@ -81,7 +81,7 @@
         </div>
     </form>
 </div>
-<footer th:replace="/layout/fragments/footer.html :: footer"></footer>
+<footer th:replace="layout/fragments/footer.html :: footer"></footer>
 
 </body>
 </html>
