--- a/src/main/resources/templates/board/articleMain.html
+++ b/src/main/resources/templates/board/articleMain.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body style="margin-bottom: 1rem">
-<div th:replace="/layout/fragments/nav.html :: nav"></div>
+<div th:replace="layout/fragments/nav.html :: nav"></div>
 
 <div class="bg-image text-center shadow-1-strong text-black-100" id="background"
      style="flex: 1;background-image: url(''); height:10vh; background-repeat:no-repeat; background-size:cover;">
@@ -121,7 +121,7 @@
                 </ul>
             </nav>
             <hr class="my-4">
-            <div th:replace="/layout/fragments/footer.html :: footer"></div>
+            <div th:replace="layout/fragments/footer.html :: footer"></div>
         </div>
     </div>
 </div>
