--- a/src/main/resources/templates/board/articleUpdate.html
+++ b/src/main/resources/templates/board/articleUpdate.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div th:replace="/layout/fragments/nav.html :: nav"></div>
+<div th:replace="layout/fragments/nav.html :: nav"></div>
 
 <div class="container" style="width: 60%; margin-bottom: 12rem">
     <div class="py-5 text-center">
@@ -59,7 +59,7 @@
     </div>
 </div>
 
-<footer th:replace="/layout/fragments/footer.html :: footer"></footer>
+<footer th:replace="layout/fragments/footer.html :: footer"></footer>
 
 </body>
 
