--- a/src/main/resources/templates/main/resultPage.html
+++ b/src/main/resources/templates/main/resultPage.html
@@ -55,7 +55,7 @@
 
 <body>
 
-<div th:replace="/layout/fragments/nav.html :: nav"></div>
+<div th:replace="layout/fragments/nav.html :: nav"></div>
 
 <div class="jumbotron jumbotron-fluid bg-dark" id="wrapper" style="height: 120%; margin-bottom: 9.5rem">
 
@@ -84,7 +84,7 @@
 
 </div>
 
-<footer th:replace="/layout/fragments/footer.html :: footer"></footer>
+<footer th:replace="layout/fragments/footer.html :: footer"></footer>
 
 </body>
 </html>
