--- a/src/main/resources/templates/board/articleAdd.html
+++ b/src/main/resources/templates/board/articleAdd.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<div th:replace="/layout/fragments/nav.html :: nav"></div>
+<div th:replace="layout/fragments/nav.html :: nav"></div>
 
 <div class="container" style="width: 60%; margin-bottom: 12rem">
     <div class="py-5 text-center">
@@ -54,7 +54,7 @@
         </button>
     </div>
 </div>
-<footer th:replace="/layout/fragments/footer.html :: footer"></footer>
+<footer th:replace="layout/fragments/footer.html :: footer"></footer>
 
 </body>
 
