--- a/src/main/resources/templates/layout/fragments/nav.html
+++ b/src/main/resources/templates/layout/fragments/nav.html
@@ -7,7 +7,7 @@
 <div th:fragment="nav">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 5rem; border-bottom: 0.2px solid black">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/main}"><img src="/image/mainLogo.png" alt="메인 로고"
+            <a class="navbar-brand" th:href="@{/}"><img src="/image/mainlogo.png" alt="메인 로고"
                                                             style="width: 3rem; height: 2rem;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/main}">Home</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" th:href="@{/article}">Community</a>
